--- a/.github/workflows/build-on-push.yml
+++ b/.github/workflows/build-on-push.yml
@@ -8,7 +8,9 @@ jobs:
       - name: Install fyne package
         run: go install fyne.io/fyne/v2/cmd/fyne@latest
       - name: Install go1.19
-        run: go install golang.org/dl/go1.19.13@latest && go1.19.13 download && export GOPHERJS_GOROOT="$(go1.19.13 env GOROOT)"
+        run: go install golang.org/dl/go1.19.13@latest && go1.19.13 download
+      - name: Add go1.19 to the PATH
+        run: echo "export GOPHERJS_GOROOT=\"$(go1.19.13 env GOROOT)\"" >> ~/.bashrc
       - name: Install gopherjs
         run: go install github.com/gopherjs/gopherjs@v1.19.0-beta1
       - name: Build
