Try to fix github action #5

--- a/.github/workflows/build-on-push.yml
+++ b/.github/workflows/build-on-push.yml
@@ -2,13 +2,10 @@ name: build-on-push
 
 on: push
 
-runs:
-  using: "docker"
-  image: "Dockerfile"
-
 jobs:
   build:
     runs-on: fedora-latest
+    container: Dockerfile
     steps:
       - name: Build
         run: just build-js
